app/src/main/java/com/example/mycvapp/view/error/ErrorState.kt
package com.example.mycvapp.view.error

enum class ErrorState {
    NETWORK_ERROR,
    DATA_ERROR,
    NO_ERROR
}